<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_screen_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100sp"
        android:textAlignment="center"
        android:fontFamily="@font/russo_one"
        android:text="@string/app_name"
        android:textColor="@color/text_color"
        android:textSize="40sp"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="300sp"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/btn_play_level"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginVertical="5sp"
            android:backgroundTint="@color/btn_bg_color"
            android:fontFamily="@font/russo_one"
            android:onClick="openLevelActivity"
            android:text="@string/button_play_level_name"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            app:cornerRadius="20sp"
            app:strokeColor="@color/btn_border_color"
            app:strokeWidth="2sp" />

        <Button
            android:id="@+id/btn_play_vs_bot"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginVertical="5sp"
            android:backgroundTint="@color/btn_bg_color"
            android:fontFamily="@font/russo_one"
            android:onClick="openPlayWithBotActivity"
            android:text="@string/button_play_vs_bot_name"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            app:cornerRadius="20sp"
            app:strokeColor="@color/btn_border_color"
            app:strokeWidth="2sp"/>

        <Button
            android:id="@+id/btn_play_local"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginVertical="5sp"
            android:backgroundTint="@color/btn_bg_color"
            android:fontFamily="@font/russo_one"
            android:text="@string/button_play_local_name"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            app:cornerRadius="20sp"
            app:strokeColor="@color/btn_border_color"
            app:strokeWidth="2sp" />

        <Button
            android:id="@+id/btn_statistic"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginVertical="5sp"
            android:backgroundTint="@color/btn_bg_color"
            android:fontFamily="@font/russo_one"
            android:text="@string/button_statistic_name"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            app:cornerRadius="20sp"
            app:strokeColor="@color/btn_border_color"
            app:strokeWidth="2sp" />
    </LinearLayout>
</RelativeLayout>