<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".ui.LevelActivity">

    <TextView
        android:id="@+id/level_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/russo_one"
        android:text="@string/level_name"
        android:textColor="@color/text_color"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/puzzle_deck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/level_screen_undertitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/russo_one"
        android:text="@string/text_level_description"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/puzzle_deck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level_screen_title" />

    <com.serediuk.checkers.view.PuzzleView
        android:id="@+id/puzzle_deck"
        android:layout_width="320sp"
        android:layout_height="320sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/puzzle_result_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20sp"
        android:background="@color/bg_color2"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <TextView
            android:id="@+id/puzzle_result_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20sp"
            android:fontFamily="@font/russo_one"
            android:text="@string/win"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/puzzle_result_undertitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:fontFamily="@font/russo_one"
            android:text="@string/win_move"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_puzzle_restart_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40sp"
            android:layout_marginTop="30sp"
            android:backgroundTint="@color/btn_bg_color"
            android:fontFamily="@font/russo_one"
            android:text="@string/button_restart_puzzle"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:onClick="restartLevel"
            app:cornerRadius="20sp"
            app:strokeColor="@color/btn_border_color"
            app:strokeWidth="2sp" />

        <Button
            android:id="@+id/btn_puzzle_next_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40sp"
            android:layout_marginTop="5sp"
            android:backgroundTint="@color/btn_bg_color"
            android:fontFamily="@font/russo_one"
            android:text="@string/button_next_puzzle"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:onClick="nextLevel"
            app:cornerRadius="20sp"
            app:strokeColor="@color/btn_border_color"
            app:strokeWidth="2sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_puzzle_restart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40sp"
        android:backgroundTint="@color/btn_bg_color"
        android:fontFamily="@font/russo_one"
        android:text="@string/button_restart_puzzle"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:onClick="restartLevel"
        app:cornerRadius="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puzzle_deck"
        app:strokeColor="@color/btn_border_color"
        app:strokeWidth="2sp" />
</androidx.constraintlayout.widget.ConstraintLayout>