<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".ui.StatisticActivity">

    <TextView
        android:id="@+id/statistic_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/russo_one"
        android:text="@string/statistic_name"
        android:textColor="@color/text_color"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/statistic_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/statistic_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50sp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/russo_one"
                android:text="@string/statistic_text_levels_count"
                android:textAlignment="textStart"
                android:textColor="@color/text_color"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/statistic_levels_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/russo_one"
                android:text="0"
                android:textAlignment="textEnd"
                android:textColor="@color/text_color"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/russo_one"
                android:text="@string/statistic_text_total"
                android:textAlignment="textStart"
                android:textColor="@color/text_color"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/statistic_total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/russo_one"
                android:text="0"
                android:textAlignment="textEnd"
                android:textColor="@color/text_color"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp">

            <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/russo_one"
                android:text="@string/statistic_text_wins"
                android:textAlignment="textStart"
                android:textColor="@color/text_color"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/statistic_wins"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/russo_one"
                android:text="0"
                android:textAlignment="textEnd"
                android:textColor="@color/text_color"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/russo_one"
                android:text="@string/statistic_text_loses"
                android:textAlignment="textStart"
                android:textColor="@color/text_color"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/statistic_loses"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/russo_one"
                android:text="0"
                android:textAlignment="textEnd"
                android:textColor="@color/text_color"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/russo_one"
                android:text="@string/statistic_text_winrate"
                android:textAlignment="textStart"
                android:textColor="@color/text_color"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/statistic_winrate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/russo_one"
                android:text="0"
                android:textAlignment="textEnd"
                android:textColor="@color/text_color"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/russo_one"
                android:text="@string/statistic_text_lower_moves"
                android:textAlignment="textStart"
                android:textColor="@color/text_color"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/statistic_lowest_moves"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/russo_one"
                android:text="0"
                android:textAlignment="textEnd"
                android:textColor="@color/text_color"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_puzzle_restart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40sp"
        android:backgroundTint="@color/btn_bg_color"
        android:fontFamily="@font/russo_one"
        android:onClick="clearStatistic"
        android:text="@string/button_clear_statistic"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:cornerRadius="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistic_layout"
        app:strokeColor="@color/btn_border_color"
        app:strokeWidth="2sp" />
</androidx.constraintlayout.widget.ConstraintLayout>